# static-program-analysis

./: Cargo.toml  README.md
crates/ast/: Cargo.toml
crates/ast/src/: fold.rs  lib.rs  print.rs  visit.rs
crates/ast/src/fold/: impls.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/interpret/: Cargo.toml
crates/interpret/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/normalize/: Cargo.toml
crates/normalize/src/: lib.rs
crates/parse/: Cargo.toml
crates/parse/src/: grammar.rs  lex.rs  lib.rs  tests.rs
crates/parse/src/snapshots/: parse2__tests__parse_inline_err@0001_record_no_close.tip.snap  parse2__tests__parse_inline_err@0002_record_no_comma.tip.snap  parse2__tests__parse_inline_err@0003_ref_exp_no_id.tip.snap  parse2__tests__parse_inline_err@0004_non_exp.tip.snap  parse2__tests__parse_inline_ok@0001_record.tip.snap  parse2__tests__parse_inline_ok@0002_record_nested.tip.snap  parse2__tests__parse_inline_ok@0003_parenthesized.tip.snap  parse2__tests__parse_inline_ok@0004_ref_exp.tip.snap  parse2__tests__parse_inline_ok@0005_deref_exp.tip.snap  parse2__tests__parse_inline_ok@0006_alloc_exp.tip.snap  parse2__tests__parse_inline_ok@0007_id_exp.tip.snap  parse2__tests__parse_inline_ok@0008_int_exp.tip.snap  parse2__tests__parse_inline_ok@0009_prefix_exp.tip.snap  parse2__tests__parse_inline_ok@0010_field_access.tip.snap  parse2__tests__parse_inline_ok@0011_nested_field_access.tip.snap  parse2__tests__parse_inline_ok@0012_call_exp.tip.snap  parse2__tests__parse_inline_ok@0013_bin_op_exp.tip.snap  parse__tests__parse_inline_err.snap  parse__tests__parse_inline_err@0001_record_no_close.tip.snap  parse__tests__parse_inline_err@0002_record_no_comma.tip.snap  parse__tests__parse_inline_err@0003_ref_exp_no_id.tip.snap  parse__tests__parse_inline_err@0004_non_exp.tip.snap  parse__tests__parse_inline_err@0005_assign_no_semi.tip.snap  parse__tests__parse_inline_err@0006_field_update_no_semi.tip.snap  parse__tests__parse_inline_err@0007_ident_followed_by_unexpected.tip.snap  parse__tests__parse_inline_err@0008_output_no_semi.tip.snap  parse__tests__parse_inline_err@0009_return_no_semi.tip.snap  parse__tests__parse_inline_err@0010_return_outside_fun.tip.snap  parse__tests__parse_inline_err@0012_var_outside_fun.tip.snap  parse__tests__parse_inline_err@0015_field_update.tip.snap  parse__tests__parse_inline_ok.snap  parse__tests__parse_inline_ok@0001_record.tip.snap  parse__tests__parse_inline_ok@0002_record_nested.tip.snap  parse__tests__parse_inline_ok@0003_parenthesized.tip.snap  parse__tests__parse_inline_ok@0004_ref_exp.tip.snap  parse__tests__parse_inline_ok@0005_deref_exp.tip.snap  parse__tests__parse_inline_ok@0006_alloc_exp.tip.snap  parse__tests__parse_inline_ok@0007_id_exp.tip.snap  parse__tests__parse_inline_ok@0008_int_exp.tip.snap  parse__tests__parse_inline_ok@0009_prefix_exp.tip.snap  (+17 more)
crates/parse/src/tests/: sourcegen_inline_tests.rs
crates/parse/test_data/parse/inline/err/exp/: 0001_record_no_close.tip  0002_record_no_comma.tip
crates/parse/test_data/parse/inline/err/stm/: 0006_field_update_no_semi.tip  0007_ident_followed_by_unexpected.tip  0010_return_outside_fun.tip  0012_var_outside_fun.tip
crates/parse/test_data/parse/inline/ok/exp/: 0001_record.tip  0002_record_nested.tip  0004_ref_exp.tip  0006_alloc_exp.tip  0009_prefix_exp.tip  0011_nested_field_access.tip  0012_call_exp.tip  0013_bin_op_exp.tip
crates/parse/test_data/parse/inline/ok/file/: 0026_program.tip
crates/parse/test_data/parse/inline/ok/fun/: 0024_fun.tip  0025_fun_block.tip
crates/parse/test_data/parse/inline/ok/stm/: 0015_field_update.tip  0016_output.tip  0017_while.tip  0018_if_else.tip  0019_if.tip  0022_indirect_field_update.tip  0023_store.tip
crates/sourcegen/: Cargo.toml
crates/sourcegen/src/: lib.rs
programs/: fib.tip  recursive-fact.tip
