[workspace]
members = ["crates/*"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
common = { path = "./crates/common" }
macros = { path = "./crates/macros" }
ast = { path = "./crates/ast" }
interpret = { path = "./crates/interpret" }
parse = { path = "./crates/parse" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt"] }
tracing-tree = "0.2.4"
serde = { version = "1.0.175", features = ["derive", "rc"] }
paste = "1.0.14"

[workspace.package]
version = "0.1.0"
edition = "2021"
