[package]
name = "common"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros.workspace = true
la-arena = "0.3.1"
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde"]
