[package]
name = "interpret"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast.workspace = true
tracing.workspace = true
serde = { workspace = true, optional = true }
rustc-hash = "1.1.0"
common.workspace = true
thiserror.workspace = true

[dev-dependencies]
parse.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
serde.workspace = true
ast = { workspace = true, features = ["serde"] }
normalize.workspace = true

[features]
serde = ["ast/serde", "dep:serde"]
