[package]
name = "parse"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = { git = "https://github.com/zesterer/chumsky", features = [
    "nightly",
    "pratt",
] }
ast.workspace = true
common.workspace = true
