[package]
name = "parse"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast.workspace = true
common.workspace = true
thiserror.workspace = true
logos = "0.13.0"

[dev-dependencies]
insta = { version = "1.31.0", features = ["ron", "glob"] }
ron = "0.8.0"
serde.workspace = true
sourcegen.workspace = true
common = { workspace = true, features = ["serde"] }
ast = { workspace = true, features = ["serde"] }
